# skill-fnd

./: .gitignore  PROJECT_STATUS.md  README.md  pyproject.toml  requirements.txt
config/: default_config.json
data/normalized/: samples.normalized.jsonl
data/raw/: samples.jsonl  smoke_samples.jsonl
data/sft/: smoke_sft.jsonl
memory_data/fake_news/: claude_style_skills.json
scripts/: evaluate.py  generate_sft_data.py  prepare_dataset.py  train_rl.py  train_sft.py
src/fake_news_skillrl/: __init__.py  agent.py  dataset.py  env.py  io_utils.py  memory.py  metrics.py  parser.py  prompting.py  schema.py  trainer.py  web_search.py
tests/: test_agent.py  test_dataset.py  test_e2e.py  test_env.py  test_memory.py  test_parser.py
