[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fake-news-skillrl"
version = "0.1.0"
description = "Standalone SkillRL-style fake news detection project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["openai>=1.40.0", "dashscope>=1.20.0", "duckduckgo-search>=6.2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
